[package]
name = "trident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*"}
serde_derive = "*"
serde_bytes = "*"
serde_bencode = "*"
reqwest = { version = "*", features = ["blocking"] }
sha1 = "*"
urlencoding = "*"